# simassign

./: LICENSE  README.md  pyproject.toml
src/simassign/: io.py  logging.py  mtl.py  util.py
src/simassign/data/: targetmask.yaml
src/simassign/tests/: test_mtl.py  test_util.py
src/simassign/tests/data/: base_tiles.ecsv  stds.fits
